@@ -1641,3 +1641,5 @@ Fixed pixel alignment in pcomb for size reduction and enlargement.
 
 Allow rtcontrib user to set -P and -PP options for persistent rendering.
 The only caveat is that -n setting > 1 requires -PP rather than -P.
+
+Added -c option to rtcontrib to facilitate cumulative calculations.
